mobile scaling fix

--- a/canceled.html
+++ b/canceled.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ECMG PaymentPortal</title>
-    <meta name="description" content="A demo of Stripe client-only Checkout"/>
 
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
