--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
     <script src="https://js.stripe.com/v3/"></script>
 </head>
 
-<body class="bg-blue-800">
+<body class="bg-blue-800 px-4">
 <div class="flex flex-col h-screen items-center justify-center antialiased text-gray-700">
     <div class="bg-white rounded-lg border-2 border-blue-900 p-4 text-center shadow-lg">
         <h1 class="font-bold text-4xl mb-2">Thanks!</h1>
